fix position of classical datatype node

--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,10 @@ h1 {
 }
 
 
+.grand-parent {
+  position:relative;
+}
+
 .circle-port:hover {
   background: #bbb;
   transition: background 200ms ease;
