--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,17 @@ h1 {
   top: 14px;
 }
 
+.classical-circle-port {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 50% !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 4px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+}
 
 .grand-parent {
   position:relative;
