--- a/src/index.css
+++ b/src/index.css
@@ -174,9 +174,10 @@ h1 {
   align-items: center;
   justify-content: flex-start;
 }
+
 .circle-port {
-  width: 10px !important;
-  height: 10px !important;
+  width: 15px !important;
+  height: 15px !important;
   border-radius: 0 !important;
   background: #898d9c;
   border: 4px solid #edeff5;
@@ -184,8 +185,21 @@ h1 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
+  left: -20px !important;
 }
 
+.circle-port-out {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important;
+  background: #898d9c;
+  border: 4px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  right: -20px !important;
+}
 .classical-circle-port {
   width: 15px !important;
   height: 15px !important;
