--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,19 @@ h1 {
   left: -20px !important;
 }
 
+.classical-circle-port-in {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 50% !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 4px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  left: -20px !important;
+}
+
 .circle-port-out {
   width: 15px !important;
   height: 15px !important;
@@ -200,6 +213,7 @@ h1 {
   top: 14px;
   right: -20px !important;
 }
+
 .classical-circle-port {
   width: 15px !important;
   height: 15px !important;
