--- a/src/index.css
+++ b/src/index.css
@@ -193,25 +193,37 @@ h1 {
   height: 15px !important;
   border-radius: 50% !important; /* Make it fully circular */
   background: #898d9c;
-  border: 4px solid #edeff5;
+  border: 1px solid #edeff5;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
-  left: -20px !important;
+  left: -7px !important;
 }
 
+.classical-circle-port-out {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 50% !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  right: -7px !important;
+}
 .circle-port-out {
   width: 15px !important;
   height: 15px !important;
   border-radius: 0 !important;
   background: #898d9c;
-  border: 4px solid #edeff5;
+  border: 1px solid black !important;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
-  right: -20px !important;
+  right: -8px !important;
 }
 
 .classical-circle-port {
