--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,7 @@ h1 {
 }
 .custom-node-port-out {
   text-align: right;
+  
 }
 
 .custom-node-port-text {
@@ -213,6 +214,20 @@ h1 {
   top: 14px;
   right: -7px !important;
 }
+
+.classical-circle-port-round-out {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 50% !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  right: 0px !important;
+}
+
 .circle-port-out {
   width: 15px !important;
   height: 15px !important;
@@ -221,7 +236,7 @@ h1 {
   border: 1px solid black !important;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  position: absolute;
+  position: absolute !important;
   top: 14px;
   right: -8px !important;
 }
