--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,33 @@ h1 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
-  left: -20px !important;
+  left: -18px !important;
+}
+
+.circle-port-op {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important;
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  left: -8px !important;
+}
+
+.circle-port-m {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important;
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  left: -8px !important;
 }
 
 .classical-circle-port-in {
