--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,32 @@ h1 {
   left: -8px !important;
 }
 
+.classical-circle-port-st {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 14px;
+  left: -7px !important;
+}
+
+.classical-circle-port-op {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important; /* Make it fully circular */
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
+  top: 2px !important;
+  left: -7px !important;
+}
+
 .circle-port-m {
   width: 15px !important;
   height: 15px !important;
@@ -404,4 +430,13 @@ h1 {
 
 .connection__start .react-flow__edges {
   z-index: 4 !important;
+}
+
+.node-icon {
+  width: 24px;
+  height: 24px;
+  background-image: url("quantum_clustering-thin.svg"); /* Update the path */
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
