add initial control structure node

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,28 @@ h1 {
   text-align: center;
 }
 
+.hexagon-left {
+  overflow: visible !important;
+  min-width: 150px; /* Use min-width instead of width */
+  min-height: 150px;
+  background-color: #ff6347;
+  position: relative;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 100% 75%, 75% 100%, 25% 100%, 0% 75%, 0% 25%);
+  left: -75px !important;
+  border: 2px solid blue;
+}
+  
+.hexagon-right {
+  background-color: #ff6347;
+  overflow: visible;
+  width: 150px;
+  height: 150px;
+  background-color: #ff6347;
+  position: relative;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 25%, 100% 75%, 75% 100%, 25% 100%, 0% 75%, 0% 25%);
+  right: -75px !important;
+}
+
 /* ======== MODAL ========== */
 .modal {
   position: fixed;
@@ -192,6 +214,7 @@ h1 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
+  overflow: visible !important;
   left: -18px !important;
 }
 
@@ -205,6 +228,17 @@ h1 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: absolute;
   top: 14px;
+  left: -8px !important;
+}
+.circle-port-gates {
+  width: 15px !important;
+  height: 15px !important;
+  border-radius: 0 !important;
+  background: #898d9c;
+  border: 1px solid #edeff5;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  position: absolute;
   left: -8px !important;
 }
 
@@ -261,6 +295,7 @@ h1 {
 }
 
 .classical-circle-port-out {
+  overflow: visible !important;
   width: 15px !important;
   height: 15px !important;
   border-radius: 50% !important; /* Make it fully circular */
